test/reverseBadLength.slq
def f(x:ğ”¹,y:ğ”¹)mfreeâ‡’(x,y);
def main(){
	f(x,y):=(); /// error
	return (x,y); /// error
}
